--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.3",
+    "nostr-tools": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
