--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy:build": "tsc && vite build --base=/tr-nostr/",
+    "deploy:build": "tsc && vite build --base=/nostroots/",
     "deploy:nojekyll": "touch dist/.nojekyll",
     "deploy:publish": "gh-pages -d dist -t",
     "deploy": "yarn deploy:build && yarn deploy:nojekyll && yarn deploy:publish"
