--- a/Kind30398Event/deno.json
+++ b/Kind30398Event/deno.json
@@ -1,6 +1,8 @@
 {
   "name": "@shuesken/nostroots-kind30398event",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "exports": "./mod.ts",
-  "imports": { "zod": "npm:zod@^3.23.8" }
+  "imports": {
+    "zod": "npm:zod@^3.23.8"
+  }
 }
