Add missing babel packages.
Not sure why, but this cleared up issues for me.

--- a/nrapp/package.json
+++ b/nrapp/package.json
@@ -38,6 +38,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/runtime": "^7.25.6",
+    "@react-native/assets-registry": "^0.75.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
