Set the bundleIdentifier for ios.

--- a/nrapp/app.json
+++ b/nrapp/app.json
@@ -13,7 +13,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "org.trustroots.nostroots"
     },
     "android": {
       "adaptiveIcon": {
