--- a/nrapp/package.json
+++ b/nrapp/package.json
@@ -24,6 +24,7 @@
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
+    "expo-split-pane": "^0.4.1",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
