--- a/nrapp/package.json
+++ b/nrapp/package.json
@@ -9,7 +9,9 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "lint-and-fix": "eslint --fix",
+    "prepare": "cd .. && husky nrapp/.husky"
   },
   "jest": {
     "preset": "jest-expo"
@@ -51,6 +53,7 @@
     "eslint-config-expo": "^7.1.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.5",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "prettier": "^3.3.3",
