--- a/nrapp/package.json
+++ b/nrapp/package.json
@@ -29,6 +29,7 @@
     "expo-split-pane": "^0.4.1",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.24",
     "expo-web-browser": "~13.0.3",
     "nostr-tools": "^2.7.2",
     "react": "18.2.0",
