Add an index file for polyfills.

--- a/nrapp/package.json
+++ b/nrapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nrapp",
-  "main": "expo-router/entry",
+  "main": "index.ts",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
