Install nip06 and polyfill crypto.

--- a/nrapp/package.json
+++ b/nrapp/package.json
@@ -22,6 +22,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -31,6 +32,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-updates": "~0.25.24",
     "expo-web-browser": "~13.0.3",
+    "nip06": "^1.2.0",
     "nostr-tools": "^2.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
