--- a/nrapp/package.json
+++ b/nrapp/package.json
@@ -32,6 +32,7 @@
     "expo-system-ui": "~3.0.7",
     "expo-updates": "~0.25.24",
     "expo-web-browser": "~13.0.3",
+    "fast-text-encoding": "^1.0.6",
     "nip06": "^1.2.0",
     "nostr-tools": "^2.7.2",
     "react": "18.2.0",
