modify workflow file to work with monorepo

--- a/.github/build-and-push-server-image.yml
+++ b/.github/build-and-push-server-image.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: Build (and push) server image 
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -73,7 +73,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
-          context: .
+          context: nrserver
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
