--- a/nr-app/app.json
+++ b/nr-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "nrapp",
-    "slug": "nrapp",
+    "name": "nr-app",
+    "slug": "nr-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -26,7 +26,9 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router"
+    ],
     "experiments": {
       "typedRoutes": true
     },
