--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nrapp",
+  "name": "nr-app",
   "main": "index.ts",
   "version": "1.0.0",
   "scripts": {
@@ -11,7 +11,7 @@
     "test": "jest --watchAll",
     "lint": "expo lint",
     "lint-fix": "eslint --fix",
-    "prepare": "cd .. && husky nrapp/.husky"
+    "prepare": "cd .. && husky nr-app/.husky"
   },
   "jest": {
     "preset": "jest-expo"
