--- a/.github/workflows/build-and-push-server-image.yml
+++ b/.github/workflows/build-and-push-server-image.yml
@@ -19,7 +19,7 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
-  IMAGE_NAME: nr-server
+  IMAGE_NAME: trustroots/nr-server
 
 jobs:
   build:
