add license field

--- a/nr-common/deno.json
+++ b/nr-common/deno.json
@@ -4,5 +4,6 @@
     "exports": "./mod.ts",
     "imports": {
         "zod": "npm:zod@^3.23.8"
-    }
+    },
+    "license": "AGPL-3.0-or-later"
 }
