--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -45,6 +45,7 @@
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
+    "redux-saga": "^1.3.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
