--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -35,6 +35,7 @@
     "fast-text-encoding": "^1.0.6",
     "nip06": "^1.2.0",
     "nostr-tools": "^2.7.2",
+    "open-location-code-typescript": "^1.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
