Working `@common/` imports for expo.

--- a/nr-app/app.json
+++ b/nr-app/app.json
@@ -31,7 +31,8 @@
       "expo-font"
     ],
     "experiments": {
-      "typedRoutes": true
+      "typedRoutes": true,
+      "tsconfigPaths": true
     },
     "extra": {
       "router": {
