--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -57,6 +57,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.57.0",
     "eslint-config-expo": "^8.0.1",
     "eslint-config-prettier": "^9.1.0",
