--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -26,6 +26,7 @@
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.7",
+    "expo-secure-store": "^14.0.0",
     "expo-splash-screen": "~0.29.11",
     "expo-split-pane": "^0.4.1",
     "expo-status-bar": "~2.0.0",
