--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -37,6 +37,7 @@
     "nip06": "^1.2.0",
     "nostr-tools": "^2.7.2",
     "open-location-code-typescript": "^1.5.0",
+    "ramda": "^0.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
