--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -35,13 +35,14 @@
     "expo-web-browser": "~14.0.1",
     "fast-text-encoding": "^1.0.6",
     "nip06": "^1.2.0",
-    "nostr-tools": "^2.7.2",
+    "nostr-tools": "2.10.3",
     "open-location-code-typescript": "^1.5.0",
     "ramda": "^0.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
