--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@mobily/ts-belt": "^3.13.1",
     "@react-navigation/native": "^7.0.3",
     "@reduxjs/toolkit": "^2.2.7",
     "expo": "~52.0.8",
@@ -37,7 +38,6 @@
     "nip06": "^1.2.0",
     "nostr-tools": "2.10.3",
     "open-location-code-typescript": "^1.5.0",
-    "ramda": "^0.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
