--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -45,12 +45,14 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
+    "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.1.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.1.2",
     "redux-devtools-expo-dev-plugin": "^1.0.0",
     "redux-saga": "^1.3.0",
+    "redux-saga-promise-actions": "^1.3.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -71,6 +73,11 @@
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "redux": "^5.0.1"
+    }
   },
   "private": true,
   "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4"
