--- a/nr-server/deno.jsonc
+++ b/nr-server/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "run": "deno run --allow-net --allow-env main.ts",
+    "run": "deno run --allow-net --allow-env mod.ts",
     "cache": "deno cache --lock deno.lock deps.ts"
   }
 }
