Add zod to server, common issues @shuesken

--- a/nr-server/deno.jsonc
+++ b/nr-server/deno.jsonc
@@ -2,5 +2,8 @@
   "tasks": {
     "run": "deno run --allow-net --allow-env mod.ts",
     "cache": "deno cache --lock deno.lock deps.ts"
+  },
+  "imports": {
+    "zod": "npm:zod@^3.23.8"
   }
 }
