--- a/nr-server/Dockerfile
+++ b/nr-server/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 # Prefer not to run as root.
 USER deno
 
+COPY deno.jsonc .
 # Cache the dependencies as a layer (the following two steps are re-run only when deps.ts is modified).
 # Ideally cache deps.ts will download and compile _all_ external files used in main.ts.
 COPY deps.ts .
