--- a/nr-server/Dockerfile
+++ b/nr-server/Dockerfile
@@ -6,6 +6,7 @@ WORKDIR /app
 USER deno
 
 COPY deno.jsonc .
+COPY deno.lock .
 # Cache the dependencies as a layer (the following two steps are re-run only when deps.ts is modified).
 # Ideally cache deps.ts will download and compile _all_ external files used in main.ts.
 COPY deps.ts .
