--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -53,6 +53,7 @@
     "redux-devtools-expo-dev-plugin": "^1.0.0",
     "redux-saga": "^1.3.0",
     "redux-saga-promise-actions": "^1.3.5",
+    "url-join": "^5.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
