--- a/nr-app/tsconfig.json
+++ b/nr-app/tsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@common/*": ["../nr-common/*"]
-    }
+    },
+    "allowImportingTsExtensions": true
   },
   "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
 }
