--- a/nr-common/deno.json
+++ b/nr-common/deno.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "exports": "./mod.ts",
   "imports": {
+    "@babel/runtime": "npm:@babel/runtime@^7.26.0",
     "zod": "npm:zod@^3.23.8"
   },
   "tasks": {
