--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -51,6 +51,7 @@
     "react-native-screens": "4.1.0",
     "react-native-web": "~0.19.13",
     "react-redux": "^9.1.2",
+    "reactotron-react-native": "^5.1.10",
     "redux-devtools-expo-dev-plugin": "^1.0.0",
     "redux-saga": "^1.3.0",
     "redux-saga-promise-actions": "^1.3.5",
