--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -14,6 +14,7 @@
     "lint-tsc": "tsc --noEmit",
     "prepare": "cd .. && husky nr-app/.husky"
   },
+  "pkgx": "+facebook.com/watchman",
   "jest": {
     "preset": "jest-expo"
   },
