--- a/nr-app/eas.json
+++ b/nr-app/eas.json
@@ -1,19 +1,18 @@
 {
   "cli": {
-    "version": ">= 11.0.3"
+    "version": ">= 14.2.0",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal",
-      "channel": "development"
+      "distribution": "internal"
     },
     "preview": {
-      "distribution": "internal",
-      "channel": "preview"
+      "distribution": "internal"
     },
     "production": {
-      "channel": "production"
+      "autoIncrement": true
     }
   },
   "submit": {
