--- a/nr-app/tsconfig.json
+++ b/nr-app/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "strict": true,
     "paths": {
-      "@/*": ["./src/*"],
-      "@common/*": ["../nr-common/*"]
+      "@/*": ["./src/*"]
     },
     "allowImportingTsExtensions": true
   },
