--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -40,7 +40,7 @@
     "fast-text-encoding": "^1.0.6",
     "nip06": "^1.2.0",
     "nostr-tools": "2.10.3",
-    "nr-common": "workspace:*",
+    "@trustroots/nr-common": "workspace:*",
     "open-location-code-typescript": "^1.5.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
