--- a/nr-common/deno.json
+++ b/nr-common/deno.json
@@ -8,7 +8,8 @@
     "zod": "npm:zod@^3.23.8"
   },
   "tasks": {
-    "cache": "deno cache --node-modules-dir deps.ts"
+    "cache": "deno cache --node-modules-dir deps.ts",
+    "build": "deno -A build_npm.ts"
   },
   "license": "AGPL-3.0-or-later"
 }
