--- a/nr-common/deno.json
+++ b/nr-common/deno.json
@@ -4,10 +4,12 @@
   "exports": "./mod.ts",
   "imports": {
     "@babel/runtime": "npm:@babel/runtime@^7.26.0",
+    "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
     "zod": "npm:zod@^3.23.8"
   },
   "tasks": {
-    "cache": "deno cache --node-modules-dir deps.ts"
+    "cache": "deno cache --node-modules-dir deps.ts",
+    "build": "deno -A build_npm.ts"
   },
   "license": "AGPL-3.0-or-later"
 }
