--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -23,6 +23,7 @@
     "@mobily/ts-belt": "^3.13.1",
     "@react-navigation/native": "^7.0.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@trustroots/nr-common": "workspace:*",
     "expo": "~52.0.8",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
@@ -40,7 +41,6 @@
     "fast-text-encoding": "^1.0.6",
     "nip06": "^1.2.0",
     "nostr-tools": "2.10.3",
-    "@trustroots/nr-common": "workspace:*",
     "open-location-code-typescript": "^1.5.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -60,6 +60,7 @@
     "redux-saga-promise-actions": "^1.3.5",
     "reselect": "^5.1.1",
     "url-join": "^5.0.0",
+    "utils": "link:@noble/hashes/utils",
     "zod": "^3.23.8"
   },
   "devDependencies": {
