ios build config answer about encryption use

--- a/nr-app/app.json
+++ b/nr-app/app.json
@@ -19,6 +19,9 @@
         "googleMaps": {
           "apiKey": "AIzaSyDw0KhR3qlPsireu68RvGXmh4nccIqnEQM"
         }
+      },
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
       }
     },
     "android": {
