--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -56,6 +56,7 @@
     "redux-devtools-expo-dev-plugin": "^1.0.0",
     "redux-saga": "^1.3.0",
     "redux-saga-promise-actions": "^1.3.5",
+    "reselect": "^5.1.1",
     "url-join": "^5.0.0",
     "zod": "^3.23.8"
   },
