remove superfluous comma

--- a/nr-app/app.json
+++ b/nr-app/app.json
@@ -29,7 +29,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "org.trustroots.nostroots",
+      "package": "org.trustroots.nostroots"
     },
     "web": {
       "bundler": "metro",
