--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -23,6 +23,7 @@
     "@mobily/ts-belt": "^3.13.1",
     "@react-navigation/native": "^7.0.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@sentry/react-native": "~6.3.0",
     "@trustroots/nr-common": "workspace:*",
     "expo": "~52.0.8",
     "expo-constants": "~17.0.3",
