fill in app.json org and project names

--- a/nr-app/app.json
+++ b/nr-app/app.json
@@ -46,10 +46,8 @@
       [
         "@sentry/react-native/expo",
         {
-          "organization": "sentry org slug, or use the `SENTRY_ORG` environment variable",
-          "project": "sentry project name, or use the `SENTRY_PROJECT` environment variable",
-          // If you are using a self-hosted instance, update the value of the url property
-          // to point towards your self-hosted instance. For example, https://self-hosted.example.com/.
+          "organization": "trustroots-foundation-fo",
+          "project": "react-native",
           "url": "https://sentry.io/"
         }
       ]
