--- a/nr-app/app.json
+++ b/nr-app/app.json
@@ -32,7 +32,8 @@
         "googleMaps": {
           "apiKey": "AIzaSyCr1ZxZlVQNI_u7FYfPkjgvZv79UeaPFYQ"
         }
-      }
+      },
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "bundler": "metro",
