--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@mobily/ts-belt": "^3.13.1",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.3",
     "@reduxjs/toolkit": "^2.2.7",
     "@sentry/react-native": "~6.3.0",
