--- a/nr-common/deno.json
+++ b/nr-common/deno.json
@@ -9,7 +9,8 @@
   },
   "tasks": {
     "cache": "deno cache --node-modules-dir deps.ts",
-    "build": "deno -A build_npm.ts"
+    "build": "deno -A build_npm.ts",
+    "test": "deno test --ignore=build/"
   },
   "license": "AGPL-3.0-or-later"
 }
