--- a/nr-common/deno.jsonc
+++ b/nr-common/deno.jsonc
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "exports": "./mod.ts",
   "imports": {
+    // "@babel/runtime": "npm:@babel/runtime@^7.26.0",
     "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
     "zod": "npm:zod@^3.23.8"
   },
