remove pre-start script

--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -3,7 +3,7 @@
   "main": "src/index.ts",
   "version": "1.0.0",
   "scripts": {
-    "start": "deno task --config ../nr-common/deno.jsonc build; expo start",
+    "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
