--- a/nr-common/deno.jsonc
+++ b/nr-common/deno.jsonc
@@ -3,13 +3,13 @@
   "version": "0.0.1",
   "exports": "./mod.ts",
   "imports": {
-    "@babel/runtime": "npm:@babel/runtime@^7.26.0",
+    // "@babel/runtime": "npm:@babel/runtime@^7.26.0",
     "@deno/dnt": "jsr:@deno/dnt@^0.41.3",
     "zod": "npm:zod@^3.23.8"
   },
   "tasks": {
     "cache": "deno cache --node-modules-dir deps.ts",
-    "build": "deno -A build_npm.ts",
+    "build": "deno run -A build_npm.ts ",
     "test": "deno test --ignore=build/"
   },
   "license": "AGPL-3.0-or-later"
