--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -64,7 +64,7 @@
     "redux-saga": "^1.3.0",
     "redux-saga-promise-actions": "^1.3.5",
     "reselect": "^5.1.1",
-    "url-join": "^5.0.0",
+    "url-join-ts": "^1.0.5",
     "utils": "link:@noble/hashes/utils",
     "zod": "^3.23.8"
   },
