--- a/.github/workflows/build-android.yaml
+++ b/.github/workflows/build-android.yaml
@@ -1,3 +1,5 @@
+name: Create android develompent build
+
 on:
   workflow_dispatch:
 
@@ -7,12 +9,18 @@ jobs:
     steps:
       - name: 🏗 Setup repo
         uses: actions/checkout@v3
+      
+      - name: 🏗 Setup pnpm
+        uses: pnpm/action-setup@v4
 
       - name: 🏗 Setup EAS
         uses: expo/expo-github-action@v8
         with:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
+
+      - name: 📦 Install dependencies
+        run: pnpm i
 
       - name: 🚀 Start Build
         run: eas build --platform android --profile development --non-interactive
