use working direcotry

--- a/.github/workflows/build-android.yaml
+++ b/.github/workflows/build-android.yaml
@@ -1,4 +1,4 @@
-name: Create android develompent build
+name: Create android development build
 
 on:
   workflow_dispatch:
@@ -15,6 +15,7 @@ jobs:
 
       - name: 🏗 Setup EAS
         uses: expo/expo-github-action@v8
+        working-directory: ./nr-app
         with:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN }}
