--- a/nr-server/deno.jsonc
+++ b/nr-server/deno.jsonc
@@ -4,6 +4,7 @@
     "cache": "deno cache --lock deno.lock deps.ts"
   },
   "imports": {
+    "@nashaddams/amqp": "jsr:@nashaddams/amqp@^1.1.0",
     "zod": "npm:zod@^3.23.8",
     "@trustroots/nr-common": "../nr-common/mod.ts"
   }
