--- a/nr-server/deno.jsonc
+++ b/nr-server/deno.jsonc
@@ -1,11 +1,10 @@
 {
   "tasks": {
     "run": "deno run --allow-net --allow-env mod.ts",
-    "cache": "deno cache --lock deno.lock deps.ts"
+    "cache": "deno cache --lock deno.lock deps.ts",
   },
   "imports": {
-    "@nashaddams/amqp": "jsr:@nashaddams/amqp@^1.1.0",
     "zod": "npm:zod@^3.23.8",
-    "@trustroots/nr-common": "../nr-common/mod.ts"
-  }
+    "@trustroots/nr-common": "../nr-common/mod.ts",
+  },
 }
