--- a/.github/workflows/eas-build.yaml
+++ b/.github/workflows/eas-build.yaml
@@ -1,16 +1,17 @@
-name: Create android development build
+name: Create  build in EAS Cloud
 
 on:
   workflow_dispatch:
     inputs:
       platform:
-        description: 'Platform'
+        description: 'Android dev build (emulator and device), iOS dev build (device), iOS dev build (simulator)'
         required: true
         default: 'android'
         type: choice
         options:
           - android
           - ios
+          - simulator
 
 jobs:
   update:
@@ -33,4 +34,4 @@ jobs:
 
       - name: 🚀 Start Build
         working-directory: ./nr-app
-        run: eas build --platform ${{ inputs.platform }}  --profile development --non-interactive
+        run: pnpm run build:${{ inputs.platform }}
