--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -56,6 +56,7 @@
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-logs": "^5.3.0",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-root-toast": "^3.6.0",
