make build commands non-intera

--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -13,10 +13,10 @@
     "lint-fix": "eslint --fix",
     "lint-ts": "tsc --noEmit",
     "prepare": "cd .. && husky nr-app/.husky",
-    "build:android": "eas build --platform android --profile development",
-    "build:ios": "eas build --platform ios --profile development",
-    "build:simulator": "eas build --platform android --profile simulator",
-    "build:android-preview": "eas build --platform android --profile preview"
+    "build:android": "eas build --platform android --profile development --non-interactive",
+    "build:ios": "eas build --platform ios --profile development --non-interactive",
+    "build:simulator": "eas build --platform android --profile simulator --non-interactive",
+    "build:android-preview": "eas build --platform android --profile preview --non-interactive"
   },
   "pkgx": "facebook.com/watchman",
   "jest": {
