--- a/nr-app/app.json
+++ b/nr-app/app.json
@@ -4,11 +4,11 @@
     "slug": "nr-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/nostroots-300x300.jpg",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/nostroots-300x300.jpg",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -24,7 +24,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/nostroots-300x300.jpg",
         "backgroundColor": "#ffffff"
       },
       "package": "org.trustroots.nostroots",
