--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -23,49 +23,49 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@mobily/ts-belt": "^3.13.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^7.0.3",
     "@reduxjs/toolkit": "^2.2.7",
-    "@sentry/react-native": "~6.10.0",
+    "@sentry/react-native": "~6.14.0",
     "@trustroots/nr-common": "workspace:*",
-    "expo": "~52.0.46",
-    "expo-clipboard": "~7.0.1",
-    "expo-constants": "~17.0.8",
-    "expo-crypto": "~14.0.2",
-    "expo-dev-client": "~5.0.20",
-    "expo-device": "~7.0.3",
-    "expo-font": "~13.0.4",
-    "expo-linking": "~7.0.5",
-    "expo-notifications": "~0.29.14",
-    "expo-router": "~4.0.20",
-    "expo-secure-store": "^14.0.1",
-    "expo-splash-screen": "~0.29.24",
+    "expo": "~53.0.9",
+    "expo-clipboard": "~7.1.4",
+    "expo-constants": "~17.1.6",
+    "expo-crypto": "~14.1.4",
+    "expo-dev-client": "~5.1.8",
+    "expo-device": "~7.1.4",
+    "expo-font": "~13.3.1",
+    "expo-linking": "~7.1.5",
+    "expo-notifications": "~0.31.2",
+    "expo-router": "~5.0.7",
+    "expo-secure-store": "^14.2.3",
+    "expo-splash-screen": "~0.30.8",
     "expo-split-pane": "^0.4.1",
-    "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.9",
-    "expo-updates": "~0.27.4",
-    "expo-web-browser": "~14.0.2",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
+    "expo-updates": "~0.28.13",
+    "expo-web-browser": "~14.1.6",
     "fast-text-encoding": "^1.0.6",
     "nip06": "^1.2.0",
     "nostr-tools": "2.10.3",
     "open-location-code-typescript": "^1.5.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-logs": "^5.3.0",
-    "react-native-maps": "1.18.0",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-maps": "1.20.1",
+    "react-native-reanimated": "~3.17.5",
     "react-native-root-toast": "^3.6.0",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "4.4.0",
-    "react-native-web": "~0.19.13",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "4.11.1",
+    "react-native-web": "~0.20.0",
     "react-redux": "^9.1.2",
-    "reactotron-react-native": "^5.1.10",
+    "reactotron-react-native": "^5.1.13",
     "redux-devtools-expo-dev-plugin": "^1.0.0",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
@@ -80,20 +80,20 @@
     "@babel/runtime": "^7.25.6",
     "@react-native/assets-registry": "^0.75.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.14",
     "@types/react-test-renderer": "^18.0.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-root-import": "^6.6.0",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "^8.0.1",
+    "eslint-config-expo": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.5",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~53.0.5",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true,
   "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4",
@@ -103,7 +103,8 @@
         "listUnknownPackages": false,
         "exclude": [
           "expo-split-pane",
-          "react-native-maps"
+          "react-native-maps",
+          "redux-persist"
         ]
       }
     }
