update to current expo sdk

--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -23,47 +23,49 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.3",
     "@mobily/ts-belt": "^3.13.1",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-picker/picker": "2.11.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.0.3",
     "@reduxjs/toolkit": "^2.2.7",
-    "@sentry/react-native": "~6.14.0",
+    "@sentry/react-native": "~7.2.0",
     "@trustroots/nr-common": "workspace:*",
-    "expo": "~53.0.10",
-    "expo-clipboard": "~7.1.4",
-    "expo-constants": "~17.1.6",
-    "expo-crypto": "~14.1.4",
-    "expo-dev-client": "~5.2.0",
-    "expo-device": "~7.1.4",
-    "expo-font": "~13.3.1",
-    "expo-linking": "~7.1.5",
-    "expo-notifications": "~0.31.3",
-    "expo-router": "~5.0.7",
-    "expo-secure-store": "^14.2.3",
-    "expo-splash-screen": "~0.30.9",
+    "expo": "~54.0.21",
+    "expo-clipboard": "~8.0.7",
+    "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.16",
+    "expo-device": "~8.0.9",
+    "expo-font": "~14.0.9",
+    "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.12",
+    "expo-router": "~6.0.14",
+    "expo-secure-store": "^15.0.7",
+    "expo-splash-screen": "~31.0.10",
     "expo-split-pane": "^0.4.1",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.8",
-    "expo-updates": "~0.28.14",
-    "expo-web-browser": "~14.1.6",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.8",
+    "expo-updates": "~29.0.12",
+    "expo-web-browser": "~15.0.8",
     "fast-text-encoding": "^1.0.6",
+    "metro": "link:@sentry/react-native/metro",
+    "metro-core": "^0.83.3",
     "nip06": "^1.2.0",
     "nostr-tools": "2.10.3",
     "open-location-code-typescript": "^1.5.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.3",
-    "react-native-gesture-handler": "~2.24.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-logs": "^5.3.0",
     "react-native-maps": "1.20.1",
-    "react-native-reanimated": "~3.17.5",
+    "react-native-reanimated": "~4.1.3",
     "react-native-root-toast": "^3.6.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "4.11.1",
-    "react-native-web": "~0.20.0",
+    "react-native-safe-area-context": "5.6.1",
+    "react-native-screens": "4.16.0",
+    "react-native-web": "~0.21.2",
     "react-redux": "^9.1.2",
     "reactotron-react-native": "^5.1.13",
     "redux-devtools-expo-dev-plugin": "^2.0.0",
@@ -80,20 +82,20 @@
     "@babel/runtime": "^7.25.6",
     "@react-native/assets-registry": "^0.75.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~19.0.14",
+    "@types/react": "~19.1.17",
     "@types/react-test-renderer": "^18.0.7",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-root-import": "^6.6.0",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "^9.2.0",
+    "eslint-config-expo": "^10.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.5",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.6",
+    "jest-expo": "~54.0.13",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.3"
   },
   "private": true,
   "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4",
