--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -93,6 +93,7 @@
     "husky": "^9.1.5",
     "jest": "^29.2.1",
     "jest-expo": "~54.0.13",
+    "patch-package": "^8.0.1",
     "prettier": "^3.3.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.9.3"
