--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -15,7 +15,7 @@
     "prepare": "cd .. && husky nr-app/.husky",
     "build:android": "eas build --platform android --profile development --non-interactive",
     "build:ios": "eas build --platform ios --profile development --non-interactive",
-    "build:simulator": "eas build --platform android --profile simulator --non-interactive",
+    "build:simulator": "eas build --platform ios --profile simulator --non-interactive",
     "build:android-preview": "eas build --platform android --profile preview --non-interactive"
   },
   "pkgx": "facebook.com/watchman",
