--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@maplibre/maplibre-react-native": "^10.4.0",
     "@mobily/ts-belt": "^3.13.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "2.11.1",
