--- a/nr-app/app.json
+++ b/nr-app/app.json
@@ -52,7 +52,8 @@
           "url": "https://sentry.io/"
         }
       ],
-      "expo-web-browser"
+      "expo-web-browser",
+      "@maplibre/maplibre-react-native"
     ],
     "experiments": {
       "typedRoutes": true,
