--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -66,6 +66,7 @@
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "4.16.0",
     "react-native-web": "~0.21.2",
+    "react-native-worklets": "0.6.1",
     "react-redux": "^9.1.2",
     "reactotron-react-native": "^5.1.13",
     "redux-devtools-expo-dev-plugin": "^2.0.0",
