--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -51,6 +51,7 @@
     "fast-text-encoding": "^1.0.6",
     "metro": "link:@sentry/react-native/metro",
     "metro-core": "^0.83.3",
+    "nativewind": "^4.2.1",
     "nip06": "^1.2.0",
     "nostr-tools": "2.10.3",
     "open-location-code-typescript": "^1.5.0",
@@ -95,7 +96,9 @@
     "jest-expo": "~54.0.13",
     "patch-package": "^8.0.1",
     "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.9.3"
   },
   "private": true,
