--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -29,8 +29,12 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/native": "^7.0.3",
     "@reduxjs/toolkit": "^2.2.7",
+    "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/slot": "^1.2.0",
     "@sentry/react-native": "~7.2.0",
     "@trustroots/nr-common": "workspace:*",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "expo": "~54.0.21",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.10",
@@ -74,6 +78,8 @@
     "redux-saga": "^1.3.0",
     "redux-saga-promise-actions": "^1.3.5",
     "reselect": "^5.1.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "url-join-ts": "^1.0.5",
     "utils": "link:@noble/hashes/utils",
     "zod": "^3.25.76"
