add production build profile

--- a/nr-app/eas.json
+++ b/nr-app/eas.json
@@ -21,7 +21,8 @@
       "distribution": "internal",
       "environment": "preview",
       "channel": "preview"
-    }
+    },
+    "production": {}
   },
   "submit": {
     "production": {}
