--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -9,7 +9,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint",
+    "lint": "pnpm lint-expo && pnpm lint-fix && pnpm lint-ts",
+    "lint-expo": "expo lint",
     "lint-fix": "eslint --fix",
     "lint-ts": "tsc --noEmit",
     "prepare": "cd .. && husky nr-app/.husky",
