get device location and center map - map redux control

--- a/nr-app/app.json
+++ b/nr-app/app.json
@@ -19,6 +19,7 @@
         "googleMapsApiKey": "AIzaSyDw0KhR3qlPsireu68RvGXmh4nccIqnEQM"
       },
       "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "We need your location to show you on the map and find notes near you.",
         "ITSAppUsesNonExemptEncryption": false
       }
     },
@@ -27,6 +28,10 @@
         "foregroundImage": "./assets/images/nostroots-300x300.png",
         "backgroundColor": "#ffffff"
       },
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ],
       "package": "org.trustroots.nostroots",
       "config": {
         "googleMaps": {
