--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -43,6 +43,7 @@
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-linking": "~8.0.8",
+    "expo-location": "^19.0.7",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.14",
     "expo-secure-store": "^15.0.7",
