--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -67,6 +67,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-logs": "^5.3.0",
     "react-native-maps": "1.20.1",
+    "react-native-modal": "14.0.0-rc.1",
     "react-native-reanimated": "~4.1.3",
     "react-native-root-toast": "^4.0.1",
     "react-native-safe-area-context": "5.6.1",
