--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@gorhom/bottom-sheet": "^5.2.6",
     "@mobily/ts-belt": "^3.13.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-picker/picker": "2.11.1",
@@ -67,7 +68,6 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-logs": "^5.3.0",
     "react-native-maps": "1.20.1",
-    "react-native-modal": "14.0.0-rc.1",
     "react-native-reanimated": "~4.1.3",
     "react-native-root-toast": "^4.0.1",
     "react-native-safe-area-context": "5.6.1",
