--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -31,6 +31,7 @@
     "@react-navigation/native": "^7.0.3",
     "@reduxjs/toolkit": "^2.2.7",
     "@rn-primitives/portal": "^1.3.0",
+    "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@sentry/react-native": "~7.2.0",
     "@trustroots/nr-common": "workspace:*",
@@ -54,6 +55,7 @@
     "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.8",
     "fast-text-encoding": "^1.0.6",
+    "lucide-react-native": "^0.553.0",
     "metro": "link:@sentry/react-native/metro",
     "metro-core": "^0.83.3",
     "nativewind": "^4.2.1",
@@ -71,6 +73,7 @@
     "react-native-root-toast": "^4.0.1",
     "react-native-safe-area-context": "5.6.1",
     "react-native-screens": "4.16.0",
+    "react-native-svg": "^15.14.0",
     "react-native-web": "~0.21.2",
     "react-redux": "^9.1.2",
     "reactotron-react-native": "^5.1.13",
