--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -9,10 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "pnpm lint-expo; pnpm lint-fix; pnpm lint-ts",
-    "lint-expo": "expo lint",
-    "lint-fix": "eslint --fix",
-    "lint-ts": "tsc --noEmit",
+    "lint": "eslint .",
     "prepare": "cd .. && husky nr-app/.husky",
     "build:android": "eas build --platform android --profile development --non-interactive",
     "build:ios": "eas build --platform ios --profile development --non-interactive",
@@ -102,16 +99,20 @@
     "eslint": "^8.57.0",
     "eslint-config-expo": "^10.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^16.5.0",
     "husky": "^9.1.5",
     "jest": "^29.2.1",
     "jest-expo": "~54.0.13",
     "patch-package": "^8.0.1",
-    "prettier": "^3.3.3",
+    "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.9.3"
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.3"
   },
   "private": true,
   "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4",
