--- a/nr-app/eas.json
+++ b/nr-app/eas.json
@@ -22,7 +22,10 @@
       "environment": "preview",
       "channel": "preview"
     },
-    "production": {}
+    "production": {
+      "autoIncrement": true,
+      "channel": "preview"
+    }
   },
   "submit": {
     "production": {}
