--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -13,7 +13,7 @@
     "prepare": "cd .. && husky nr-app/.husky",
     "build:android-development": "eas build --platform android --profile development --non-interactive",
     "build:ios-development": "eas build --platform ios --profile development --non-interactive",
-    "build:simulator-simulator": "eas build --platform ios --profile simulator --non-interactive",
+    "build:ios-simulator": "eas build --platform ios --profile simulator --non-interactive",
     "build:android-preview": "eas build --platform android --profile preview --non-interactive",
     "build:ios-production": "eas build --platform ios --profile production --non-interactive --auto-submit"
   },
