--- a/.github/workflows/eas-update.yaml
+++ b/.github/workflows/eas-update.yaml
@@ -2,19 +2,6 @@ name: Send an OTA update
 
 on:
   workflow_dispatch:
-    inputs:
-      channel:
-        description: Update Channel
-        required: true
-        default: 'preview'
-        type: choice
-        options:
-          - preview
-      message:
-        description: Message
-        required: true
-        default: ''
-        type: string
 
 jobs:
   build:
@@ -29,4 +16,4 @@ jobs:
 
       - name: 🗞️ Send Update
         working-directory: ./nr-app
-        run: eas update --channel ${{inputs.channel}} --message "${{inputs.message}}"
+        run: eas update --channel preview"
