--- a/nr-app/app.json
+++ b/nr-app/app.json
@@ -84,7 +84,7 @@
     "newArchEnabled": true,
     "updates": {
       "url": "https://u.expo.dev/a6c7b2e0-f036-44a3-b57c-d05b9d383c30",
-      "checkAutomatically": false
+      "checkAutomatically": "NEVER"
     },
     "owner": "nostroots"
   }
