--- a/.github/workflows/eas-update.yaml
+++ b/.github/workflows/eas-update.yaml
@@ -16,4 +16,4 @@ jobs:
 
       - name: 🗞️ Send Update
         working-directory: ./nr-app
-        run: eas update --channel preview --non-interactive
+        run: eas update --channel preview --non-interactive --auto
