--- a/nr-app/package.json
+++ b/nr-app/package.json
@@ -68,6 +68,7 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-keyboard-controller": "^1.20.2",
     "react-native-logs": "^5.3.0",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.3",
