--- a/nr-push/strfry-plugin/deno.json
+++ b/nr-push/strfry-plugin/deno.json
@@ -2,6 +2,7 @@
   "tasks": {
     "cache": "deno cache --lock deno.lock main.ts",
     "run": "deno run --allow-net main.ts",
+    "compile": "deno compile --allow-net main.ts",
     "dev": "deno run --watch main.ts"
   },
   "imports": {
