--- a/nr-push/strfry/docker-compose.yml
+++ b/nr-push/strfry/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   strfry-nostr-relay:
-    image: ghcr.io/hoytech/strfry:latest
+    image: ghcr.io/trustroots/strfry:master
+    container_name: strfry
+
     volumes:
       - ./strfry.conf:/etc/strfry.conf
       - ./strfry-db:/app/strfry-db
