Add comprehensive test framework for nr-web
- Set up Vitest for unit/integration tests and Playwright for E2E tests
- Docker-first approach: all tests run in containers by default
- Implemented 64 tests covering:
  * Unit tests: key management, relay management (14 tests)
  * Integration tests: modals, forms, status messages (26 tests)
  * E2E tests: onboarding, settings, map, note posting (24 tests)
- Added test fixtures and helpers for reusable test data
- Created Makefile and docker-compose for easy test execution
- Updated documentation with testing guidelines

All tests passing. Framework is simple, effective, and easily expandable.

--- a/nr-web/.gitignore
+++ b/nr-web/.gitignore
@@ -38,3 +38,10 @@ next-env.d.ts
 # OS
 .DS_Store
 Thumbs.db
+
+# Test artifacts
+coverage
+.vitest
+test-results
+playwright-report
+playwright/.cache
