Claude: Add nr-notification-daemon to deno in VSCode.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
     "./nr-common",
     "./nr-server",
     "./nr-push/strfry-plugin",
-    "./development-utils/nip-46-client"
+    "./development-utils/nip-46-client",
+    "./nr-notification-daemon"
   ],
   "deno.enable": true,
   "search.exclude": {
