Claude: Fix linting errors.

--- a/nr-notification-daemon/deno.json
+++ b/nr-notification-daemon/deno.json
@@ -6,6 +6,10 @@
   "imports": {
     "@trustroots/nr-common": "../nr-common/mod.ts",
     "@nashaddams/amqp": "jsr:@nashaddams/amqp@1.1.0",
-    "zod": "npm:zod@^3.25.76"
+    "zod": "npm:zod@^3.25.76",
+    "nostr-tools": "npm:nostr-tools@2.10.4",
+    "nostr-tools/pure": "npm:nostr-tools@2.10.4/pure",
+    "nostr-tools/relay": "npm:nostr-tools@2.10.4/relay",
+    "@noble/hashes/utils": "npm:@noble/hashes@1.7.1/utils"
   }
 }
