ci: run tests before all builds

--- a/.github/workflows/build-and-push-nr-relay-image.yml
+++ b/.github/workflows/build-and-push-nr-relay-image.yml
@@ -13,7 +13,11 @@ env:
   IMAGE_NAME: trustroots/nr-relay
 
 jobs:
+  test:
+    uses: ./.github/workflows/test.yml
+
   build:
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: read
