--- a/.github/workflows/publish-nr-common.yml
+++ b/.github/workflows/publish-nr-common.yml
@@ -8,7 +8,11 @@ on:
       - "nr-common/**"
 
 jobs:
+  test:
+    uses: ./.github/workflows/test.yml
+
   publish:
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: read
