--- a/.github/workflows/build-and-push-nr-notification-daemon-image.yml
+++ b/.github/workflows/build-and-push-nr-notification-daemon-image.yml
@@ -17,7 +17,11 @@ env:
   IMAGE_NAME: trustroots/nr-notification-daemon
 
 jobs:
+  test:
+    uses: ./.github/workflows/test.yml
+
   build:
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: read
