refactor: use nostr-tools instead of websockets

--- a/nr-monitor/deno.json
+++ b/nr-monitor/deno.json
@@ -8,6 +8,7 @@
     "@trustroots/nr-common": "../nr-common/mod.ts",
     "zod": "npm:zod@^3.25.76",
     "nostr-tools/pure": "npm:nostr-tools@2.10.4/pure",
+    "nostr-tools/relay": "npm:nostr-tools@2.10.4/relay",
     "@noble/hashes/utils": "npm:@noble/hashes@1.7.1/utils"
   }
 }
