--- a/nr-monitor/deno.json
+++ b/nr-monitor/deno.json
@@ -9,6 +9,7 @@
     "zod": "npm:zod@^3.25.76",
     "nostr-tools/pure": "npm:nostr-tools@2.10.4/pure",
     "nostr-tools/relay": "npm:nostr-tools@2.10.4/relay",
-    "@noble/hashes/utils": "npm:@noble/hashes@1.7.1/utils"
+    "@noble/hashes/utils": "npm:@noble/hashes@1.7.1/utils",
+    "@std/log": "jsr:@std/log@0.224.5"
   }
 }
