--- a/nr-relay-to-rabbit/deno.json
+++ b/nr-relay-to-rabbit/deno.json
@@ -6,6 +6,7 @@
   "imports": {
     "@trustroots/nr-common": "../nr-common/mod.ts",
     "@nashaddams/amqp": "jsr:@nashaddams/amqp@1.1.0",
-    "zod": "npm:zod@^3.25.76"
+    "zod": "npm:zod@^3.25.76",
+    "@std/log": "jsr:@std/log@0.224.5"
   }
 }
